[tool.poetry]
name = "user-api"
version = "0.1.0"
description = "REST API на LiteStar для управления пользователями"
authors = ["Narek tg - @NarekPy"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1"
litestar = { extras = ["standard", "swagger"], version = "^2" }
litestar-granian = "^0"
litestar-asyncpg = "^0"
advanced-alchemy = "^1.4"
pydantic = "^2.7"
pydantic-settings  = "^2.2"

[tool.poetry.group.dev.dependencies]
black = "^24"
ruff = "^0.4"
pytest = "^8"
pytest-asyncio = "^0.23"
