[tool.poetry]
name        = "user-api"
version     = "0.1.0"
description = "REST API на Litestar для управления пользователями"
authors     = ["Narek <tg @NarekPy>"]
packages    = [{ include = "app" }]

[tool.poetry.dependencies]
python              = "^3.12"
python-dotenv       = "^1.0"
litestar            = { extras = ["standard"], version = "^2" }
litestar-granian    = "^0"
litestar-asyncpg    = "^0"
advanced-alchemy    = { version = "^1.4.2", extras = ["cli"] }
msgspec             = "^0.18.6"
asyncpg             = "^0.29"

[tool.poetry.group.dev.dependencies]
black              = "^24.4"
ruff               = "^0.4"
pytest             = "^8.2"
pytest-asyncio     = "^0.23"
